Updated card styling and structure

--- a/index.html
+++ b/index.html
@@ -1,15 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Credera-UX-Card-Exercise</title>
-    <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
-  </head>
-  <body>
-    <div class="Container">
+
+<head>
+  <title>Credera-UX-Card-Exercise</title>
+  <link rel="stylesheet" type="text/css" href="index.css" media="screen" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans:wght@400;700&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div class="card">
+    <div class="image-container">
+      <img class="image" src="quantum_computer-shutterstock2.png" />
+      <div class="accent"></div>
+    </div>
+    <div class="card-body">
+      <p class="date">AUGUST 10, 2015</p>
+      <p class="title">Google is Building Quantum Computing Processors</p>
+      <p class="text">Google has teamed up with a group of university scientists in California in an effort to build
+        quantum information processors...</p>
+      <a class="card-link">
+        READ FULL ARTICLE
+        <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 24 18" fill="none"
+          stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
+          class="internal-link__RightIcon-w9yj4j-0 eVrgV">
+          <line x1="5" y1="12" x2="19" y2="12"></line>
+          <polyline points="12 5 19 12 12 19"></polyline>
+        </svg>
+      </a>
+    </div>
+  </div>
+
+
+
+
+
+    <!-- <div class="Container">
         <div class="Card">
+            
+        </div>
+        <div class="mask">
 
         </div>
-    </div>
+        <div class="IMAGE">
+            <img src="quantum_computer-shutterstock2.png" class="image"/>
+        </div>
+        
+    </div> -->
 
 
 
