Fixed image masking for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="card">
     <div class="image-container">
-      <img class="image" src="quantum_computer-shutterstock2.png" />
+      <img class="image" src="quantum_computer-shutterstock2.png" alt="Quantum Computer Cube"/>
       <div class="accent"></div>
     </div>
     <div class="card-body">
@@ -31,26 +31,5 @@
       </a>
     </div>
   </div>
-
-
-
-
-
-    <!-- <div class="Container">
-        <div class="Card">
-            
-        </div>
-        <div class="mask">
-
-        </div>
-        <div class="IMAGE">
-            <img src="quantum_computer-shutterstock2.png" class="image"/>
-        </div>
-        
-    </div> -->
-
-
-
-
   </body>
 </html>
